pom file builds and connects to sonarqube when run with sonar-scanner