@@ -14,10 +14,16 @@
     </parent>
 
     <dependencies>
-    
+        <dependency>
+            <groupId>org.codehaus.sonar-plugins.java</groupId>
+            <artifactId>sonar-jacoco-listeners</artifactId>
+            <version>${sonar-jacoco-listeners.version}</version>
+            <scope>test</scope>
+        </dependency>
 	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            
         </dependency>
         <!-- tag::actuator[] -->
         <dependency>
@@ -36,136 +42,154 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <jacoco-maven-plugin.version>0.7.4.201502262128</jacoco-maven-plugin.version>
+       
+       <!-- Editing out old stuff  <jacoco-maven-plugin.version>0.7.4.201502262128</jacoco-maven-plugin.version>
+        <argLine>-Xmx128m</argLine>-->
+        <!--  The next two lines are an attempt to debug
+            <scope>test</scope>
+      		<optional>true</optional>-->
+      		
+      		
+      	<!--  This format is used by SonarQube. If you need another format see "buildnumber-maven-plugin" -->
+<maven.build.timestamp.format>MM.yyyy</maven.build.timestamp.format>
+<yearMonth>${maven.build.timestamp}</yearMonth>    
+<!-- ************************-->
+<!-- Sonar/Reporting settings -->
+<!-- ************************-->
+<!-- Sonar/Jacoco integration. Note that these properties need to be defined outside the "coverage" profile
+because we want to be to able to execute mvn sonar:sonar without passing a profile -->
+<!-- Tells Sonar to use jacoco for coverage results -->
+<sonar.projectKey>MyProjectKey</sonar.projectKey>
+<sonar.projectName>My Project</sonar.projectName>
+ <sonar.projectVersion>${yearMonth}</sonar.projectVersion>
+<sonar.language>java</sonar.language>
+<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+<!-- Jacoco version to use -->
+<jacoco.version>0.7.2.201409121644</jacoco.version>
+<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
+<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
+<!-- Don't let Sonar execute tests. We will ask it to Maven 'sonar.dynamicAnalysis' is deprecated since version 4.3 and should no longer be used. -->
+<!-- <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis> -->
+<!-- The system property jacoco.outputDir needs to be override on the command line
+    with an absolute path if you want to merge results from all modules.
+    Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
+    mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
+    Note that unfortunately using the following does not work because of
+    http://jira.codehaus.org/browse/SONAR-3427:
+<jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
+-->
+<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
+<!-- Jacoco output file for UTs -->
+<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
+<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+<!-- Jacoco output file for ITs -->
+<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
+<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+<!-- <sonar.junit.reportsPath>${project.build.directory}/surefire-reports/</sonar.junit.reportsPath> -->
+<!-- <sonar.tests>src/test/java</sonar.tests> -->
+<!-- === END of Sonar/Reporting settings === -->
     </properties>
-
+   
     <build>
         <plugins>
-        	<plugin>
-                <groupId>org.eclipse.m2e</groupId>
-                <artifactId>lifecycle-mapping</artifactId>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <lifecycleMappingMetadata>
-                        <pluginExecutions>
-                            <pluginExecution>
-                                <pluginExecutionFilter>
-                                    <groupId>org.jacoco</groupId>
-                                    <artifactId>jacoco-maven-plugin</artifactId>
-                                    <versionRange>(,0.7.4.201502262128]</versionRange>
-                                    <goals>
-                                        <goal>prepare-agent</goal>
-                                    </goals>
-                                </pluginExecutionFilter>
-                                <action>
-                                    <ignore></ignore>
-                                </action>
-                            </pluginExecution>
-                        </pluginExecutions>
-                    </lifecycleMappingMetadata>
+                    <argLine>${jacoco.agent.ut.arg}</argLine>
+                    <!-- Specific to generate mapping between tests and covered code -->
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>org.sonar.java.jacoco.JUnitListener</value>
+                        </property>
+                    </properties>
+                    <!-- test failure ignore -->
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
-        
-
-<!-- Configuring The JaCoCo Maven Plugin -->
-<plugin>
-	<groupId>org.jacoco</groupId>
-	<artifactId>jacoco-maven-plugin</artifactId>
-	<version>0.6.3.201306030806</version>
-	<executions>
-		<!-- Prepares the property pointing to the JaCoCo runtime agent which 
-			is passed as VM argument when Maven the Surefire plugin is executed. -->
-		<execution>
-			<id>pre-unit-test</id>
-			<goals>
-				<goal>prepare-agent</goal>
-			</goals>
-			<configuration>
-				<!-- Sets the path to the file which contains the execution data. -->
-				<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-				<!-- Sets the name of the property containing the settings for JaCoCo 
-					runtime agent. -->
-				<propertyName>surefireArgLine</propertyName>
-			</configuration>
-		</execution>
-		<!-- Ensures that the code coverage report for unit tests is created 
-			after unit tests have been run. -->
-		<execution>
-			<id>post-unit-test</id>
-			<phase>test</phase>
-			<goals>
-				<goal>report</goal>
-			</goals>
-			<configuration>
-				<!-- Sets the path to the file which contains the execution data. -->
-				<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-				<!-- Sets the output directory for the code coverage report. -->
-				<outputDirectory>${project.build.directory}/jacoco-ut</outputDirectory>
-			</configuration>
-		</execution>
-	</executions>
-</plugin>
-<!-- Configuring The Maven Surefire Plugin -->
-<plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-surefire-plugin</artifactId>
-	<configuration>
-		<!-- Sets the VM argument line used when unit tests are run. -->
-		<argLine>${surefireArgLine}</argLine>
-		<!-- Skips unit tests if the value of skip.unit.tests property is true -->
-		<skipTests>${skip.unit.tests}</skipTests>
-		<!-- Excludes integration tests when unit tests are run. -->
-		<excludes>
-			<exclude>**/IT*.java</exclude>
-		</excludes>
-	</configuration>
-</plugin>
-<!-- Configuring The Maven Failsafe Plugin -->
-<plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-failsafe-plugin</artifactId>
-	<executions>
-		<!-- Ensures that both integration-test and verify goals of the Failsafe 
-			Maven plugin are executed. -->
-		<execution>
-			<id>integration-tests</id>
-			<goals>
-				<goal>integration-test</goal>
-				<goal>verify</goal>
-			</goals>
-			<configuration>
-				<!-- Sets the VM argument line used when integration tests are run. -->
-				<argLine>${failsafeArgLine}</argLine>
-				<!-- Skips integration tests if the value of skip.integration.tests 
-					property is true -->
-				<skipTests>${skip.integration.tests}</skipTests>
-			</configuration>
-		</execution>
-	</executions>
-</plugin>
-			
-          <!--    <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
+                    </argLine>
+                    <!-- Specific to generate mapping between tests and covered code -->
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>org.sonar.java.jacoco.JUnitListener</value>
+                        </property>
+                    </properties>
+                    <!-- Let's put failsafe reports with surefire to have access to tests 
+                        failures/success reports in sonar -->
+                    <reportsDirectory>${project.build.directory}/surefire-reports
+                    </reportsDirectory>
+                </configuration>
             </plugin>
             <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
+                        to be passed to the JVM hosting the code being tested. -->
+                    <execution>
+                        <id>prepare-ut-agent</id>
+                        <phase>process-test-classes</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${sonar.jacoco.reportPath}</destFile>
+                            <propertyName>jacoco.agent.ut.arg</propertyName>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+                    <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
+                        to be passed to the JVM hosting the code being tested. -->
+                    <execution>
+                        <id>prepare-it-agent</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${sonar.jacoco.itReportPath}</destFile>
+                            <propertyName>jacoco.agent.it.arg</propertyName>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+    
+<!-- Integraton tests -->
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>integration-test</id>
+                        <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <phase>verify</phase>
+                        <goals>
                             <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-surefire-plugin</artifactId>
-	        	<configuration>
-		          <runOrder>random</runOrder>
-		        </configuration>
-	        </plugin> -->
         </plugins>
-    </build>
+        </build>
 
 </project>
